--- a/html/Profile.html
+++ b/html/Profile.html
@@ -1,127 +1,131 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-    <title>Simple Sidebar - Start Bootstrap Template</title>
+  <title>Profile</title>
 
-    <!-- Bootstrap Core CSS -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-    <link href='https://fonts.googleapis.com/css?family=Montserrat+Alternates' rel='stylesheet' type='text/css'>
+  <!-- Bootstrap Core CSS -->
+  <link href="../css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+  <link href='https://fonts.googleapis.com/css?family=Montserrat+Alternates' rel='stylesheet' type='text/css'>
 
-    <!-- Custom CSS -->
-    <link href="../css/simple-sidebar.css" rel="stylesheet">
-    <link href="../css/profileStyle.css" rel="stylesheet">
+  <!-- Custom CSS -->
+  <link href="../css/simple-sidebar.css" rel="stylesheet">
+  <link href="../css/profileStyle.css" rel="stylesheet">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
+  <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+  <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+  <![endif]-->
 
 </head>
 
 <body>
 
-    <div id="wrapper">
+  <div id="wrapper">
 
-        <!-- Sidebar -->
-        <div id="sidebar-wrapper">
-            <ul class="sidebar-nav">
-                <li class="sidebar-seprator-top">
-                </li>
-                <li class="sidebar-brand-lg">
-                    <a href="#"><i class="fa fa-home fa-3x" aria-hidden="true"></i></a>
-                </li>
-                <li class="sidebar-brand-sm">
-                    <a href="#"><i class="fa fa-tachometer fa-2x" aria-hidden="true"></i></a>
-                </li>
-                <li class="sidebar-brand-sm">
-                    <a href="#"><i class="fa fa-book fa-2x" aria-hidden="true"></i></a>
-                </li>
-                <li class="sidebar-brand-sm">
-                    <a href="#"><i class="fa fa-phone fa-2x" aria-hidden="true"></i></a>
-                </li>
-                <div class="seperator-me"></div>
-                <li class="sidebar-brand-sm">
-                    <a href="#"><i class="fa fa-cog fa-2x" aria-hidden="true"></i></a>
-                </li>
-                <li class="sidebar-brand-sm">
-                    <a href="#"><i class="fa fa-question-circle fa-2x" aria-hidden="true"></i></a>
-                </li>
+    <!-- Sidebar -->
+    <div id="sidebar-wrapper">
+      <ul class="sidebar-nav">
+        <li class="sidebar-seprator-top">
+        </li>
+        <li class="sidebar-brand-lg">
+          <a href="#"><i class="fa fa-home fa-3x" aria-hidden="true"></i></a>
+        </li>
+        <li class="sidebar-brand-sm">
+          <a href="#"><i class="fa fa-tachometer fa-2x" aria-hidden="true"></i></a>
+        </li>
+        <li class="sidebar-brand-sm">
+          <a href="#"><i class="fa fa-book fa-2x" aria-hidden="true"></i></a>
+        </li>
+        <li class="sidebar-brand-sm">
+          <a href="#"><i class="fa fa-phone fa-2x" aria-hidden="true"></i></a>
+        </li>
+        <div class="seperator-me"></div>
+        <li class="sidebar-brand-sm">
+          <a href="#"><i class="fa fa-cog fa-2x" aria-hidden="true"></i></a>
+        </li>
+        <li class="sidebar-brand-sm">
+          <a href="#"><i class="fa fa-question-circle fa-2x" aria-hidden="true"></i></a>
+        </li>
 
-            </ul>
-        </div>
-        <!-- /#sidebar-wrapper -->
+      </ul>
+    </div>
+    <!-- /#sidebar-wrapper -->
 
-        <!-- Page Content -->
-        <div id="page-content-wrapper">
-            <div class="container-fluid" id = "container-me">
-                <nav class="navbar navbar-default" id =  "nav-me">
-                  <div class="container-fluid">
-                    <!-- Brand and toggle get grouped for better mobile display -->
-                    <div class="navbar-header">
-                      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                      </button>
-                      <a class="navbar-brand" href="#" id = "navbrand" style="color: black; margin-left:6px; font-family: 'Montserrat Alternates', sans-serif;">
-                        Profile Info</a>
-                    </div>
-
-                    <!-- Collect the nav links, forms, and other content for toggling -->
-                    <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
-                      <ul class="nav navbar-nav">
-                        <li><a href="#" style="color:black; font-family: 'Montserrat Alternates', sans-serif;">Notifications</a></li>
-                      </ul>
-                      
-                    </div><!-- /.navbar-collapse -->
-                  </div><!-- /.container-fluid -->
-                </nav>
-
-                <div id = "contents-me">
-                    <div class="row"  id="content-profile">
-                        <div class="col-lg-12">
-                            <h1>Simple Sidebar</h1>
-                            <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
-                            <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
-                        </div>
-                    </div>
-
-                    <div class="row" id="navigator-profile">
-                        <div class="col-lg-12">
-                            <h1>Simple Sidebar</h1>
-                            <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
-                            <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
-                        </div>
-                    </div>
-                </div>
+    <!-- Page Content -->
+    <div id="page-content-wrapper">
+      <!--add anything inside-->
+      <div class="container-fluid" id = "container-me">
+        <nav class="navbar navbar-default" id =  "nav-me">
+          <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+              <a class="navbar-brand" href="#" id = "navbrand">
+                Profile Info
+              </a>
             </div>
-        </div>
-        <!-- /#page-content-wrapper -->
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
+              <ul class="nav navbar-nav">
+                <li><a href="#" id = "nofitication">Notifications</a></li>
+              </ul>
+            </div><!-- /.navbar-collapse -->
+          </div><!-- /.container-fluid -->
+        </nav>
+
+        <div id = "contents-me">
+          <div class="row"  id="content-profile">
+            <div class="col-lg-12" style="padding-left:0;">
+              <ul id = "infoTag" style="padding-left:20px;">
+                <b>Full Name:</b>
+                <p>Heqian Liu</p>
+                <hr style="margin-top: 0;">
+                <b>Email:</b>
+                <p>lhq@bu.edu</p>
+                <hr style="margin-top: 0;">
+                <b>Phone Number:</b>
+                <p>(617)676-8517</p>
+                <hr style="margin-top: 0;">
+                <b>Password:</b>
+                <p><i class="fa fa-ellipsis-h" style="margin-right:5px;"aria-hidden="true"></i><i class="fa fa-ellipsis-h" aria-hidden="true"></i></p>
+                <hr style="margin-top: 0;">
+                <button  type="button" id = "profileButton" class="btn btn-default font-Mont">Edit Profile</button>
+                <button  type="button" id = "cgPass" class="btn btn-default font-Mont">Change Password</button>
+              </ul>
+            </div>
+          </div>
+          <div class="row" id="navigator-profile">
+            <ul class="list-group font-Mont-opacity">
+              <button type="button" class="list-group-item" href="#">Profile Info</button>
+              <button type="button" class="list-group-item" href="#">OPTION1</button>
+              <button type="button" class="list-group-item" href="#">OPTION2</button>
+              <button type="button" class="list-group-item" href="#">OPTION3</button>
+              <button type="button" class="list-group-item" href="#">OPTION4</button>
+            </ul>
+          </div>
+        </div> <!--contents me collapse-->
+      </div>
 
     </div>
-    <!-- /#wrapper -->
+    <!-- /#page-content-wrapper -->
+  </div>
+  <!-- /#wrapper -->
+  <!-- jQuery -->
+  <script src="../js/jquery.js"></script>
+  <!-- Bootstrap Core JavaScript -->
+  <script src="../js/bootstrap.min.js"></script>
 
-    <!-- jQuery -->
-    <script src="../js/jquery.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="../js/bootstrap.min.js"></script>
-
-    <!-- Menu Toggle Script -->
-
-
+  <!-- Menu Toggle Script -->
 </body>
-
 </html>
