--- a/html/EmailSetting.html
+++ b/html/EmailSetting.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Profle</title>
+  <title>Email Setting</title>
 
   <!-- Bootstrap Core CSS -->
   <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -18,7 +18,7 @@
 
   <!-- Custom CSS -->
   <link href="../css/simple-sidebar.css" rel="stylesheet">
-  <link href="../css/profileStyle.css" rel="stylesheet">
+  <link href="../css/EmailStyle.css" rel="stylesheet">
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -87,21 +87,42 @@
         <div id = "contents-me">
           <div class="row"  id="content-profile">
             <div class="col-lg-12" style="padding-left:0;">
-              <ul id = "infoTag" style="padding-left:20px;">
-                <b>Full Name:</b>
-                <p>Heqian Liu</p>
-                <hr style="margin-top: 0;">
-                <b>Email:</b>
-                <p>lhq@bu.edu</p>
-                <hr style="margin-top: 0;">
-                <b>Phone Number:</b>
-                <p>(617)676-8517</p>
-                <hr style="margin-top: 0;">
-                <b>Password:</b>
-                <p><i class="fa fa-ellipsis-h" style="margin-right:5px;"aria-hidden="true"></i><i class="fa fa-ellipsis-h" aria-hidden="true"></i></p>
-                <hr style="margin-top: 0;">
-                <a  id = "profileButton" class="btn btn-default font-Mont">Edit Profile</a>
-                <a  id = "cgPass" class="btn btn-default font-Mont">Change Password</a>
+              <ul id = "infoTag" style="padding-left:20px; padding-right:20px;">
+                <li class="list-group-item" style="border:none; margin:0;">
+                   <b class="font-Mont" style="margin-bottom: 3px;">News Subscription</b><br>
+                     <p class="font-Mont" style="font-size:12px; margin-bottom: 3px;display:inline-block;">
+                        Toggle to enable each week's news subscription.
+                     </p>
+                     <div class="material-switch pull-right">
+                       <input id="someSwitchOptionSuccess001" name="someSwitchOption001" type="checkbox"/>
+                       <label for="someSwitchOptionSuccess001" class="label-success"></label>
+                     </div>
+                </li>
+                <hr style="margin-top: 0; margin-left:10px;">
+
+                <li class="list-group-item" style="border:none; margin:0;">
+                   <b class="font-Mont" style="margin-bottom: 3px;display:inline-block;">Course Notification</b><br>
+                   <p class="font-Mont" style="font-size:12px; margin-bottom: 3px;display:inline-block;">
+                      Toggle to enable notifications of new courses
+                   </p>
+                     <div class="material-switch pull-right">
+                       <input id="someSwitchOptionSuccess002" name="someSwitchOption002" type="checkbox"/>
+                       <label for="someSwitchOptionSuccess002" class="label-success"></label>
+                     </div>
+                </li>
+                <hr style="margin-top: 0; margin-left:10px;">
+
+                <li class="list-group-item" style="border:none; margin:0;">
+                    <b class="font-Mont" style="margin-bottom: 3px;display:inline-block;">Paperless Bill</b><br>
+                    <p class="font-Mont" style="font-size:12px; margin-bottom: 3px;display:inline-block;">
+                       Toggle to enable sending the bill paperlessly.
+                    </p>
+                     <div class="material-switch pull-right">
+                       <input id="someSwitchOptionSuccess003" name="someSwitchOption003" type="checkbox"/>
+                       <label for="someSwitchOptionSuccess003" class="label-success"></label>
+                     </div>
+                </li>
+                <hr style="margin-top: 0; margin-left:10px;">
               </ul>
             </div>
           </div>
