--- a/html/Home.html
+++ b/html/Home.html
@@ -28,6 +28,9 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
+        <a class="navbar-brand" href="#" id = "header-img">
+          <img alt="Brand" src="./images/PKU.png" height="80" width="80">
+        </a>
 	      <a class="navbar-brand" href="#" id = "brand-me">PKU Tech Lab</a>
 	    </div>
 
@@ -37,7 +40,7 @@
 	        <li><a href="#">About</a></li>
           <li><a href="#">Pricing</a></li>
           <li><a href="#">Sign In</a></li>
-          <li><a href="#" id="freetrial">Free Trial</a></li>
+          <li><a href="#" id = "freetrial">Free Trial</a></li>
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
@@ -68,11 +71,12 @@
             <div class="email">
               <input type="email" class="form-control" placeholder="Email *" aria-describedby="basic-addon2">
             </div>
-        </div>
-        <li role="separator" class="divider"></li>
-          <button value="sign-up" id="signup-button" type="submit" class="button">
-            <span>Claim your free trail</span>
-          </button>
+            <li role="separator" class="divider"></li>
+            <button value="sign-up" id="signup-button" type="submit" class="button">
+              <span>Claim your free trail</span>
+              <svg preserveAspectRatio="xMinYMin meet" viewBox="0 0 11 12" class="play-icon"><use xlink:href="/assets/icons-ceb0b55c4b903f5ede69334fa08f21ba.svg#play-icon"></use></svg>
+            </button>
+          </div>
         </form>
       </div>
       </div>
