About page added

--- a/html/About.html
+++ b/html/About.html
@@ -9,7 +9,8 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Profle</title>
+  <title>About</title>
+
   <!-- Bootstrap Core CSS -->
   <link href="../css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
@@ -17,7 +18,7 @@
 
   <!-- Custom CSS -->
   <link href="../css/simple-sidebar.css" rel="stylesheet">
-  <link href="../css/profileStyle.css" rel="stylesheet">
+  <link href="../css/AboutStyle.css" rel="stylesheet">
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -51,7 +52,7 @@
         </li>
         <div class="seperator-me"></div>
         <li class="sidebar-brand-sm">
-          <a href="#"><i class="fa fa-cog fa-2x" aria-hidden="true"></i></a>
+          <a href="Profile.html"><i class="fa fa-cog fa-2x" aria-hidden="true"></i></a>
         </li>
         <li class="sidebar-brand-sm">
           <a href="About.html"><i class="fa fa-question-circle fa-2x" aria-hidden="true"></i></a>
@@ -70,7 +71,7 @@
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
               <a class="navbar-brand" href="#" id = "navbrand">
-                Profile Info
+                About Us
               </a>
             </div>
 
@@ -86,32 +87,12 @@
         <div id = "contents-me">
           <div class="row"  id="content-profile">
             <div class="col-lg-12" style="padding-left:0;">
-              <ul id = "infoTag" style="padding-left:20px;">
-                <b>Full Name:</b>
-                <p>Heqian Liu</p>
-                <hr style="margin-top: 0;">
-                <b>Email:</b>
-                <p>lhq@bu.edu</p>
-                <hr style="margin-top: 0;">
-                <b>Phone Number:</b>
-                <p>(617)676-8517</p>
-                <hr style="margin-top: 0;">
-                <b>Password:</b>
-                <p><i class="fa fa-ellipsis-h" style="margin-right:5px;"aria-hidden="true"></i><i class="fa fa-ellipsis-h" aria-hidden="true"></i></p>
-                <hr style="margin-top: 0;">
-                <a  id = "profileButton" class="btn btn-default font-Mont">Edit Profile</a>
-                <a  id = "cgPass" class="btn btn-default font-Mont">Change Password</a>
-              </ul>
+              <p class="font-Mont" style="font-size:16px;">This is where you learn...</p>
+              <p class="font-ub" style="font-size:14px; padding-left:2px;">Some of the most frequently asked questions from students are listed below with helpful answers from our Support team. If you need help with something not answered below, check out the Community. It's an active, helpful community of fellow Treehouse students.
+
+If you don't find an answer below or on the Treehouse Forum, we'd love the opportunity to help you. You can get in touch with our Support team directly by clicking the button below.</p>
+              <a href="#" id = "contactButton" class="btn btn-default font-Mont">Contact Us</a>
             </div>
-          </div>
-          <div class="row" id="navigator-profile">
-            <ul class="list-group font-Mont-opacity">
-              <a class="list-group-item"  style="background-color:white;" href="Profile.html">Profile Info</a>
-              <a class="list-group-item" href="EmailSetting.html">Email Settings</a>
-              <a class="list-group-item" href="#">OPTION2</a>
-              <a class="list-group-item" href="#">OPTION3</a>
-              <a class="list-group-item" href="#">OPTION4</a>
-            </ul>
           </div>
         </div> <!--contents me collapse-->
       </div>
