--- a/html/EmailSetting.html
+++ b/html/EmailSetting.html
@@ -55,7 +55,7 @@
           <a href="#"><i class="fa fa-cog fa-2x" aria-hidden="true"></i></a>
         </li>
         <li class="sidebar-brand-sm">
-          <a href="#"><i class="fa fa-question-circle fa-2x" aria-hidden="true"></i></a>
+          <a href="About.html"><i class="fa fa-question-circle fa-2x" aria-hidden="true"></i></a>
         </li>
 
       </ul>
@@ -78,7 +78,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav">
-                <li><a href="#" id = "nofitication">Notifications</a></li>
+                <li><a href="#" id = "nofitication"><i class="fa fa-bell-o fa-2x" aria-hidden="true"></i></a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
@@ -128,8 +128,8 @@
           </div>
           <div class="row" id="navigator-profile">
             <ul class="list-group font-Mont-opacity">
-              <a class="list-group-item"  style="background-color:white;" href="Profile.html">Profile Info</a>
-              <a class="list-group-item" href="EmailSetting.html">Email Settings</a>
+              <a class="list-group-item" href="Profile.html">Profile Info</a>
+              <a class="list-group-item"  style="background-color:white;" href="EmailSetting.html">Email Settings</a>
               <a class="list-group-item" href="#">OPTION2</a>
               <a class="list-group-item" href="#">OPTION3</a>
               <a class="list-group-item" href="#">OPTION4</a>
