Add Everything's update

--- a/html/About.html
+++ b/html/About.html
@@ -42,13 +42,13 @@
           <a href="Home.html"><i class="fa fa-home fa-3x" aria-hidden="true"></i></a>
         </li>
         <li class="sidebar-brand-sm">
-          <a href="#"><i class="fa fa-tachometer fa-2x" aria-hidden="true"></i></a>
+          <a href="Dashboard.html"><i class="fa fa-tachometer fa-2x" aria-hidden="true"></i></a>
         </li>
         <li class="sidebar-brand-sm">
           <a href="#"><i class="fa fa-book fa-2x" aria-hidden="true"></i></a>
         </li>
         <li class="sidebar-brand-sm">
-          <a href="#"><i class="fa fa-phone fa-2x" aria-hidden="true"></i></a>
+          <a href="Appointment.html"><i class="fa fa-phone fa-2x" aria-hidden="true"></i></a>
         </li>
         <div class="seperator-me"></div>
         <li class="sidebar-brand-sm">
@@ -91,7 +91,7 @@
               <p class="font-ub" style="font-size:14px; padding-left:2px;">Some of the most frequently asked questions from students are listed below with helpful answers from our Support team. If you need help with something not answered below, check out the Community. It's an active, helpful community of fellow Treehouse students.
 
 If you don't find an answer below or on the Treehouse Forum, we'd love the opportunity to help you. You can get in touch with our Support team directly by clicking the button below.</p>
-              <a href="#" id = "contactButton" class="btn btn-default font-Mont">Contact Us</a>
+              <a href="ContactUs.html" id = "contactButton" class="btn btn-default font-Mont">Contact Us</a>
             </div>
           </div>
         </div> <!--contents me collapse-->
