--- a/html/Profile.html
+++ b/html/Profile.html
@@ -41,17 +41,17 @@
           <a href="Home.html"><i class="fa fa-home fa-3x" aria-hidden="true"></i></a>
         </li>
         <li class="sidebar-brand-sm">
-          <a href="#"><i class="fa fa-tachometer fa-2x" aria-hidden="true"></i></a>
+          <a href="Dashboard.html"><i class="fa fa-tachometer fa-2x" aria-hidden="true"></i></a>
         </li>
         <li class="sidebar-brand-sm">
           <a href="#"><i class="fa fa-book fa-2x" aria-hidden="true"></i></a>
         </li>
         <li class="sidebar-brand-sm">
-          <a href="#"><i class="fa fa-phone fa-2x" aria-hidden="true"></i></a>
+          <a href="Appointment.html"><i class="fa fa-phone fa-2x" aria-hidden="true"></i></a>
         </li>
         <div class="seperator-me"></div>
         <li class="sidebar-brand-sm">
-          <a href="#"><i class="fa fa-cog fa-2x" aria-hidden="true"></i></a>
+          <a href="Profile.html"><i class="fa fa-cog fa-2x" aria-hidden="true"></i></a>
         </li>
         <li class="sidebar-brand-sm">
           <a href="About.html"><i class="fa fa-question-circle fa-2x" aria-hidden="true"></i></a>
@@ -108,7 +108,7 @@
             <ul class="list-group font-Mont-opacity">
               <a class="list-group-item"  style="background-color:white;" href="Profile.html">Profile Info</a>
               <a class="list-group-item" href="EmailSetting.html">Email Settings</a>
-              <a class="list-group-item" href="#">OPTION2</a>
+              <a class="list-group-item" href="ContactUs.html">Contact Us</a>
               <a class="list-group-item" href="#">OPTION3</a>
               <a class="list-group-item" href="#">OPTION4</a>
             </ul>
