--- a/html/Video.html
+++ b/html/Video.html
@@ -39,23 +39,23 @@
         <li class="sidebar-seprator-top">
         </li>
         <li class="sidebar-brand-lg">
-          <a href="#"><i class="fa fa-home fa-3x" aria-hidden="true"></i></a>
+          <a href="Home.html"><i class="fa fa-home fa-3x" aria-hidden="true"></i></a>
         </li>
         <li class="sidebar-brand-sm">
-          <a href="#"><i class="fa fa-tachometer fa-2x" aria-hidden="true"></i></a>
+          <a href="Dashboard.html"><i class="fa fa-tachometer fa-2x" aria-hidden="true"></i></a>
         </li>
         <li class="sidebar-brand-sm">
-          <a href="#"><i class="fa fa-book fa-2x" aria-hidden="true"></i></a>
+          <a href=""><i class="fa fa-book fa-2x" aria-hidden="true"></i></a>
         </li>
         <li class="sidebar-brand-sm">
-          <a href="#"><i class="fa fa-phone fa-2x" aria-hidden="true"></i></a>
+          <a href="Appointment.html"><i class="fa fa-phone fa-2x" aria-hidden="true"></i></a>
         </li>
         <div class="seperator-me"></div>
         <li class="sidebar-brand-sm">
-          <a href="#"><i class="fa fa-cog fa-2x" aria-hidden="true"></i></a>
+          <a href="Profile.html"><i class="fa fa-cog fa-2x" aria-hidden="true"></i></a>
         </li>
         <li class="sidebar-brand-sm">
-          <a href="#"><i class="fa fa-question-circle fa-2x" aria-hidden="true"></i></a>
+          <a href="About.html"><i class="fa fa-question-circle fa-2x" aria-hidden="true"></i></a>
         </li>
 
       </ul>
@@ -107,7 +107,7 @@
       </div>
       <div class="playvideo" style="width:90%; margin-left:5%;background-color:#FFFFFF;">
         <video width=100% height=30% autoplay controls>
-          <source src="./media/lastword.mp4" type="video/mp4">
+          <source src="../media/lastword.mp4" type="video/mp4">
         </video>
       </div>
       <div class="box-footer">
@@ -139,7 +139,7 @@
               </form>
             </div>
             <div id="tab3" class="tab">
-              <form method="get" action="./media/lastword.mp4">
+              <form method="get" action="../media/lastword.mp4">
                 <h4>
                   Want to download the video?
                 </h4>
