--- a/html/EmailSetting.html
+++ b/html/EmailSetting.html
@@ -42,17 +42,17 @@
           <a href="Home.html"><i class="fa fa-home fa-3x" aria-hidden="true"></i></a>
         </li>
         <li class="sidebar-brand-sm">
-          <a href="#"><i class="fa fa-tachometer fa-2x" aria-hidden="true"></i></a>
+          <a href="Dashboard.html"><i class="fa fa-tachometer fa-2x" aria-hidden="true"></i></a>
         </li>
         <li class="sidebar-brand-sm">
           <a href="#"><i class="fa fa-book fa-2x" aria-hidden="true"></i></a>
         </li>
         <li class="sidebar-brand-sm">
-          <a href="#"><i class="fa fa-phone fa-2x" aria-hidden="true"></i></a>
+          <a href="Appointment.html"><i class="fa fa-phone fa-2x" aria-hidden="true"></i></a>
         </li>
         <div class="seperator-me"></div>
         <li class="sidebar-brand-sm">
-          <a href="#"><i class="fa fa-cog fa-2x" aria-hidden="true"></i></a>
+          <a href="Profile.html"><i class="fa fa-cog fa-2x" aria-hidden="true"></i></a>
         </li>
         <li class="sidebar-brand-sm">
           <a href="About.html"><i class="fa fa-question-circle fa-2x" aria-hidden="true"></i></a>
