--- a/html/Home.html
+++ b/html/Home.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="../css/homestyle.css">
 
   <link href='https://fonts.googleapis.com/css?family=Montserrat+Alternates' rel='stylesheet' type='text/css'>
-
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 
 </head>
 
@@ -21,70 +21,111 @@
 	<nav class="navbar navbar-default navbar-fixed-top" id = "nav-home">
 	  <div class="container-fluid">
 	    <!-- Brand and toggle get grouped for better mobile display -->
-	    <div class="navbar-header">
-	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-1" aria-expanded="false">
+	    <div class="navbar-header" id="nav-me">
+	      <button type="button" class="navbar-toggle collapsed" id="bt-cl-me" data-toggle="collapse" data-target="#bs-1" aria-expanded="false">
 	        <span class="sr-only">Toggle navigation</span>
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
 	      </button>
-        <a class="navbar-brand" href="#" id = "header-img">
-          <img alt="Brand" src="./images/PKU.png" height="80" width="80">
+      <div id="brands-combo">
+        <a href="#" id = "header-img">
+          <img alt="Brand" src="../img/PKU.png" height="80px" width="80px">
         </a>
-	      <a class="navbar-brand" href="#" id = "brand-me">PKU Tech Lab</a>
-	    </div>
+	      <a href="#" id = "brand-me">PKU Tech Lab</a>
+      </div>
+	  </div>
 
 	    <!-- Collect the nav links, forms, and other content for toggling -->
-	    <div class="collapse navbar-collapse" id="bs-1">
+	    <div class="collapse navbar-collapse font-Mont" id="bs-1">
 	      <ul class="nav navbar-nav navbar-right navbar-b-me">
-	        <li><a href="#">About</a></li>
-          <li><a href="#">Pricing</a></li>
-          <li><a href="#">Sign In</a></li>
+	        <li><a href="About.html">About</a></li>
+          <li><a href="ContactUs.html">Contact</a></li>
+          <li><a href="#" data-toggle="modal" data-target="#signinModal">Sign In</a></li>
           <li><a href="#" id = "freetrial">Free Trial</a></li>
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
 	</nav>
 
-  <div class="jumbotron" id = "jumbo-me">
-  		<div class="container">
-  			<!--Add Code Here and Use css to change bg green-->
-        <div class="words">
-          <h2>Change your career.</h2>
-          <h2>Change your life.</h2>
+  <div id="signinModal" class="modal fade positionModal" role="dialog">
+    <div class="modal-dialog modal-me">
+    <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title font-Mont-red">Sign in</h4>
         </div>
-      <div class="panel panel-me">
-        <div class="panel-heading">
-          <h1>Get Started Today</h1>
-        </div>
-        <div class="panel-body">
-          <form class="freetrial_signup" action = "" role = "form">
-          <div class="signup">
-            <div class="username">
-              <div class="firstname">
-                <input type="text" class="form-control" placeholder="First name *" aria-describedby="basic-addon1">
+        <form action="">
+          <div class="modal-body">
+              <div>
+                  <input type="text" class="form-control signinBar font-Mont" name="email" value="" placeholder="Email*" required="required"/>
+                  <input type="password" class="form-control signinBar font-Mont" name="password" value="" placeholder="Password*" required="required"/>
+                  <input type="checkbox" id="check-me"> <p class="font-Mont" style="display:inline-block;">Remember Me</p><br>
               </div>
-              <div class="lastname">
-                <input type="text" class="form-control" placeholder="Last name *" aria-describedby="basic-addon1">
-              </div>
-            </div>
-            <div class="email">
-              <input type="email" class="form-control" placeholder="Email *" aria-describedby="basic-addon2">
-            </div>
-            <li role="separator" class="divider"></li>
-            <button value="sign-up" id="signup-button" type="submit" class="button">
-              <span>Claim your free trail</span>
-              <svg preserveAspectRatio="xMinYMin meet" viewBox="0 0 11 12" class="play-icon"><use xlink:href="/assets/icons-ceb0b55c4b903f5ede69334fa08f21ba.svg#play-icon"></use></svg>
-            </button>
           </div>
+         <div class="modal-footer">
+          <a href="#"><button type="submit" value="Submit" class="btn btn-success font-Mont" id="modalSuccess">Submit</button><a>
+          <a href="#"><button type="button" class="font-Mont" id="modalClose" data-dismiss="modal">Close</button><a>
+         </div>
         </form>
       </div>
+    </div>
+  </div>
+
+  <div id = "jumbo-me">
+        <div id="text-home"class="font-Mont">
+          <p>Experience, Learn, Create</p>
+          <p>With PKU Tech Lab</p>
+        </div>
+        <div class="panel panel-default panel-me font-Mont">
+          <div class="panel-heading" id="p-h">
+              <p>Get Started Today</p>
+          </div>
+          <div class="panel-body">
+            <form class="freetrial_signup" action = "" role = "form">
+            <div class="signup">
+                <div id="firstname" class="name-me input-bar">
+                  <input type="text" class="form-control" placeholder="First name *" aria-describedby="basic-addon1">
+                </div>
+                <div id="lastname" class="name-me input-bar">
+                  <input type="text" class="form-control" placeholder="Last name *" aria-describedby="basic-addon1">
+                </div>
+              <div id="email" class="input-bar">
+                <input type="email" class="form-control" placeholder="Email *" aria-describedby="basic-addon2">
+              </div>
+              <hr style="margin:15px 0 15px 0;">
+              <a data-toggle="modal" data-target="#signupModal"><button id="signup-button" class="btn-claim">Claim your Free Trial </button></a>
+            </div>
+        </form>
       </div>
       </div>
 	</div>
 
-
-
+  <div id="signupModal" class="modal fade positionModal" role="dialog">
+    <div class="modal-dialog modal-me">
+    <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title font-Mont-red">Sign Up A New Account</h4>
+        </div>
+        <form action="">
+          <div class="modal-body">
+              <div>
+                <label for="email">Email: <span class="required">*</span></label>
+                <input type="email" id="email" name="email" value="" placeholder="johndoe@example.com" required="required" />
+              </div>
+          </div>
+         <div class="modal-footer">
+          <a href="#"><button type="button" class="btn btn-success font-Mont" id="modalSuccess" data-dismiss="modal">Submit</button><a>
+          <a href="#"><button type="button" class="font-Mont" id="modalClose" data-dismiss="modal">Close</button><a>
+         </div>
+        </form>
+      </div>
+    </div>
+  </div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
